Fix a couple of minor issues
 - I still can't remember which way round -n and -z are, meaning
   FORCE_BUILD did not work.
 - Download buttons were a little too narrow.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -95,7 +95,7 @@ header {
     font-size: 1.1em;
 
     a {
-      max-width: 300px;
+      max-width: 400px;
       flex-basis: 90%;
       margin: 10px 20px;
       box-sizing: border-box;
